modify guava_benchmark, add 2 new worloads